<resources>
    <string name="app_name">Kan Kardeş</string>
    <string name="title_activity_ayarlar">Ayarlar</string>
    <string name="siteUrl">kankardes.org</string>
    <string name="sitePath">api</string>
    <!--<string name="siteUrl">192.168.1.66</string>-->
    <!--<string name="sitePath">kankardesapi</string>-->

    <string name="ad_soyad_hint">Adınız Soyadınız (Ahmet Aydın)</string>
    <string name="tel_no_hint">Telefon Numaranız (5301011010)</string>
    <string name="kan_grubu_label_text">Kan Grubunuz:</string>
    <string name="kaydet_button_text">Kaydet</string>

    <string name="pref_id_default">NULL</string>
    <string name="pref_ad_soyad_default">NULL</string>
    <string name="pref_tel_no_default">NULL</string>
    <string name="pref_yasanilan_yer_default">NULL</string>
    <string name="pref_kan_grubu_default">NULL</string>

    <string name="pref_vid_key">vid</string>
    <string name="pref_id_key">id</string>
    <string name="pref_ad_soyad_key">ad_soyad</string>
    <string name="pref_tel_no_key">tel_no</string>
    <string name="pref_yasanilan_yer_key">yasanilan_sehir</string>
    <string name="pref_kan_grubu_key">kan_grubu</string>

    <string name="pref_ad_soyad_title">Ad Soyad</string>
    <string name="pref_tel_no_title">Telefon Numarası</string>
    <string name="pref_yasanilan_yer_title">Şehir</string>
    <string name="pref_kan_grubu_title">Kan Grubu</string>


    <string name="yeni_istek_ad_soyad_text">Ad Soyad:</string>
    <string name="yeni_istek_kendi_bilgileriniz_text">Kendiniz İçin</string>
    <string name="yeni_istek_baska_bilgiler_text">Başkası İçin</string>
    <string name="yeni_istek_telefon_no_text">Telefon No:</string>
    <string name="yeni_istek_yasanilan_sehir_text">Şehir:</string>
    <string name="yeni_istek_kan_grubu_text">Kan Grubu:</string>
    <string name="yeni_istek_hastane_text">Hastane:</string>
    <string name="yeni_istek_kaydet_button_text">Kaydet</string>

    <string name="title_activity_onceki_bagislar">Geçmiş Talepleriniz</string>
    <string name="title_oneri_istekler_activty">Öneri/Şikayet</string>
    <string name="title_hakkinda_activity">Hakkında</string>



</resources>
