<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.IlkGiris"
        tools:context="org.revay.android.kankardes.IlkGiris">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/red_blood_drop" />

        <EditText
            android:id="@+id/editTextAdSoyad"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ad_soyad_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editTextTelNo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/tel_no_hint"
            android:inputType="phone"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="@+id/editTextAdSoyad"
            app:layout_constraintStart_toStartOf="@+id/editTextAdSoyad"
            app:layout_constraintTop_toBottomOf="@+id/editTextAdSoyad" />

        <Spinner
            android:id="@+id/spinnerSehir"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:entries="@array/turkey_city"
            app:layout_constraintEnd_toEndOf="@+id/editTextTelNo"
            app:layout_constraintStart_toStartOf="@+id/editTextTelNo"
            app:layout_constraintTop_toBottomOf="@+id/editTextTelNo" />

        <TextView
            android:id="@+id/textViewKanGrubuLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/kan_grubu_label_text"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerKanGrubu"
            app:layout_constraintStart_toStartOf="@+id/spinnerSehir"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSehir" />

        <Spinner
            android:id="@+id/spinnerKanGrubu"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:entries="@array/kan_gruplari"
            app:layout_constraintEnd_toEndOf="@+id/spinnerSehir"
            app:layout_constraintStart_toEndOf="@+id/textViewKanGrubuLabel"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSehir" />

        <Button
            android:id="@+id/buttonKaydet"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:onClick="kaydet"
            android:text="@string/kaydet_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinnerKanGrubu"
            app:layout_constraintStart_toStartOf="@+id/textViewKanGrubuLabel"
            app:layout_constraintTop_toBottomOf="@+id/spinnerKanGrubu" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
